[package]
name = "mmdb-grpc"
version = "0.5.0"
authors = ["Takeru Sato <type.in.type@gmail.com>"]
edition = "2018"
description = "The gRPC service that provides a query to Maxmind's GeoLite2 databases"
documentation = "https://github.com/tkrs/mmdb-grpc"
homepage = "https://github.com/tkrs/mmdb-grpc"
repository = "https://github.com/tkrs/mmdb-grpc.git"
readme = "README.md"
license = "MIT"
keywords = ["maxmind", "geoip"]

[dependencies]
clap = "3.0.0-beta.1"
crossbeam-channel = "0.4"
env_logger = "0.7"
futures = "0.3"
grpcio = "0.6"
grpcio-proto = "0.6"
log = "0.4"
maxminddb = "0.14"
protobuf = "2.16"
signal-hook = "0.1"
spin = "0.5"
cron = "0.6"
chrono = "0.4"

[build-dependencies]
protobuf-build = { version = "0.11", default-features = false }

[[bin]]
name = "mmdb-server"
path = "src/server.rs"

[[bin]]
name = "mmdb-reload"
path = "src/reloader.rs"

[profile.release]
debug = true
lto = true

[[example]]
name = "mmdb-client"
path = "examples/src/client.rs"
