[package]
name = "mmdb-grpc"
version = "0.5.4-alpha.0"
authors = ["Takeru Sato <type.in.type@gmail.com>"]
edition = "2018"
description = "The gRPC service that provides a query to Maxmind's GeoLite2 databases"
documentation = "https://github.com/tkrs/mmdb-grpc"
homepage = "https://github.com/tkrs/mmdb-grpc"
repository = "https://github.com/tkrs/mmdb-grpc.git"
readme = "README.md"
license = "MIT"
keywords = ["maxmind", "geoip"]

[dependencies]
clap = "3.0.0-beta.2"
crossbeam-channel = "0.5"
env_logger = "0.8"
futures = "0.3"
grpcio = "0.7"
grpcio-proto = "0.7"
log = "0.4"
maxminddb = "0.17"
protobuf = "2.18"
signal-hook = "0.3"
spin = "0.7"
cron = "0.7"
chrono = "0.4"

[build-dependencies]
protobuf-build = { version = "0.11", default-features = false }

[[bin]]
name = "mmdb-server"
path = "src/server.rs"

[[bin]]
name = "mmdb-reload"
path = "src/reloader.rs"

[profile.release]
debug = true
lto = true

[[example]]
name = "mmdb-client"
path = "examples/src/client.rs"
