[package]
name = "mmdb-grpc"
version = "0.5.8"
authors = ["Takeru Sato <type.in.type@gmail.com>"]
edition = "2018"
description = "The gRPC service that provides a query to Maxmind's GeoLite2 databases"
documentation = "https://github.com/tkrs/mmdb-grpc"
homepage = "https://github.com/tkrs/mmdb-grpc"
repository = "https://github.com/tkrs/mmdb-grpc.git"
readme = "README.md"
license = "MIT"
keywords = ["maxmind", "geoip"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossbeam-channel = "0.5"
env_logger = "0.10"
futures = "0.3"
grpcio = "0.12"
grpcio-proto = "0.12"
grpcio-health = "0.12"
log = "0.4"
maxminddb = "0.24"
protobuf = "3.5"
signal-hook = "0.3"
spin = "0.9"
cron = "0.12"
chrono = "0.4"
parse_duration = "2"

[build-dependencies]
protobuf-build = { version = "0.15", default-features = false, features = ["grpcio-protobuf-codec"] }

[[bin]]
name = "mmdb-server"
path = "src/server.rs"

[[bin]]
name = "mmdb-reload"
path = "src/reloader.rs"

[profile.release]
debug = true
lto = true

[[example]]
name = "mmdb-client"
path = "examples/src/client.rs"
